examples/kju/positive/functions/function_overload.kju
fun f(x:Bool):Bool{
	return x;
}

fun f(x:Int):Int{
	return x;
}

fun kju():Unit{
}