examples/kju/negative/double_declaration_of_function.kju
fun f(x: Int): Bool {
	return true;
}

fun f(x: Int): Bool {
	return false;
}

fun kju(): Unit {
	f(1);
}
